--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.PRTrack"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.AddExerciseActivity"
+            android:name=".Activities.AddWorkoutActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.BodyPartActivity"
